fixes input box size on firefox / adds new bundle

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -53,6 +53,9 @@
 .modal__text-input {
   display: block;
   width: 100%;
+  -moz-box-sizing: content-box;
+  box-sizing: border-box;
+  
 }
 
 .modal__confirm-button {
